test/corpus/background_with_given_and_and_steps.txt
===================================
Background with given and and steps
===================================

Feature: This is the name of a feature
  Background:
    Given this should be done before each scenario
	And this also will run before each scenario
	And this also also will run before each scenario

  Scenario: This is the title of a scenario
    Given this is a given step
    When this is a when step
    Then this is a then step

---

(feature
  (feature_keyword)
  (title)
  (scenarios
	(background
	  (background_keyword)
	  (given_steps
	    (given_step
		  (given_keyword)
		  (step_definition)
		)
	    (additional_step
		  (additional_step_keyword
		    (and_keyword)
		  )
		  (step_definition)
		)
	    (additional_step
		  (additional_step_keyword
		    (and_keyword)
		  )
		  (step_definition)
		)
	  )
	)
    (scenario
      (scenario_keyword)
      (title)
      (steps
        (given_steps
          (given_step
            (given_keyword)
            (step_definition)
          )
        )
        (when_step
          (when_keyword)
          (step_definition)
        )
        (then_steps
          (then_step
            (then_keyword)
            (step_definition)
          )
        )
      )
    )
  )
)
