test/corpus/doc_string_with_backticks_for_when_step.txt
======================================
Doc string with back tick on when step
======================================

Feature: This is the name of a feature
  Scenario: This is the title of a scenario
    Given this is a given step
    When this is a when step
	  ```
	  This also is a doc string
      step parameter.
	  It is delimited with backticks
	  ```
    Then this is a then step

---

(feature
  (feature_keyword)
  (title)
  (scenarios
    (scenario
      (scenario_keyword)
      (title)
      (steps
        (given_steps
          (given_step
            (given_keyword)
            (step_definition)
          )
        )
        (when_step
          (when_keyword)
          (step_definition)
		  (step_arguments
		    (doc_string)
		  )
        )
        (then_steps
          (then_step
            (then_keyword)
            (step_definition)
          )
        )
      )
    )
  )
)
