test/corpus/two_given_steps_two_when_steps_two_then_steps.txt
===========================
Two given two when two then
===========================

Feature: This is the name of a feature
  Example: This is the title of a scenario
    Given this is a given step
    Given this is another given step
    When this is a when step
    When this is anoter when step
    Then this is a then step
    Then this is another then step

---

(feature
  (feature_keyword)
  (title)
  (scenario
    (example_keyword)
    (title)
    (steps
      (full_step
        (step_keyword
          (given_keyword)
        )
        (step_definition)
      )
      (full_step
        (step_keyword
          (given_keyword)
        )
        (step_definition)
      )
      (full_step
        (step_keyword
          (when_keyword)
        )
        (step_definition)
      )
      (full_step
        (step_keyword
          (when_keyword)
        )
        (step_definition)
      )
      (full_step
        (step_keyword
          (then_keyword)
        )
        (step_definition)
      )
      (full_step
        (step_keyword
          (then_keyword)
        )
        (step_definition)
      )
    )
  )
)
